Initial functionality after transfer

--- a/app/styles/makeMaps_components.css
+++ b/app/styles/makeMaps_components.css
@@ -33,7 +33,7 @@ hr{
 .menuHeader:hover{
   background-color: #415c93 !important;
 }
-.mapify-options{
+.makeMaps-options{
   background-color: #1a263f;
   cursor: default;
 }
