--- a/app/styles/makeMaps_components.css
+++ b/app/styles/makeMaps_components.css
@@ -25,10 +25,22 @@ hr{
   color: #cecece;
   width: 75%;
 }
+.menuOpen{
+  animation-name: menuOpen;
+  animation-duration: 0.2s;
+}
+.menuClose{
+  animation-name: menuClose;
+  animation-duration: 0.2s;
+}
 
 .menu{
   color:#9e9e9e;
   text-align: center;
+}
+.menu label{
+  margin-top: 20;
+  display: inline-block;
 }
 .menuHeader{
   text-align: center;
@@ -91,26 +103,29 @@ hr{
 }
 
 .primaryButton {
-	background-color:#6891e2;
+	background-color:#ffffff;
 	text-indent:0;
-	border:1px solid #549341;
+	border:1px solid #54b4ce;
   border-radius: 5px;
 	display:inline-block;
-	color:#ffffff;
-	font-family:Arial;
+	color:#7a7a7a;
 	font-size:15px;
 	font-weight:bold;
 	font-style:normal;
 	height:40px;
-	line-height:40px;
+	line-height:38px;
 	width:131px;
 	text-decoration:none;
 	text-align:center;
 }.primaryButton:hover {
-	background-color:#415c93;
+  color: #3f3f3f;
+  border: 3px solid #54b4ce;
+  line-height: 34px;
 }
 .primaryButton:disabled{
   background-color:#c1c1c1;
+  border:1px solid #c1c1c1;
+
 }
 /* This button was generated using CSSButtonGenerator.com */
 
@@ -135,25 +150,40 @@ hr{
 }
 
 .menuButton {
-	background-color:#FFFFFF;
-	text-indent:0;
-	border:1px solid #549341;
-	color:#c1c1c1;
-	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	font-style:normal;
-	height:40px;
-	line-height:40px;
-	width:100%;
-	text-decoration:none;
-	text-align:center;
+  background-color: #ffffff;
+   border: 1px solid #54b4ce;
+   color: #7a7a7a;
+   font-size: 15px;
+   font-style: normal;
+   font-weight: bold;
+   height: 40px;
+   line-height: 38px;
+   text-align: center;
+   text-decoration: none;
+   text-indent: 0;
+   width: 100%;
+   border-radius: 4px;
 }.menuButton:hover {
-	background-color:#293c60;
+    color: #3f3f3f;
+    border: 3px solid #54b4ce;
+    line-height: 34px;
 }
 
 .colorBlock{
   cursor: pointer;
-  border-radius: 15px;
+  border-radius: 5px;
   text-align: center;
+}
+
+
+/* The animation code */
+@keyframes menuOpen {
+   from {width:0}
+   to {width: 250}
+}
+
+/* The animation code */
+@keyframes menuClose {
+   from {width:250}
+   to {width: 0}
 }
