allow filter delete/opacity option for all symbol maps

--- a/app/styles/makeMaps_components.css
+++ b/app/styles/makeMaps_components.css
@@ -182,6 +182,13 @@ hr{
   z-index: 600;
 }
 
+.legend{
+  z-index: 600;
+}
+
+.filter{
+  z-index: 600;
+}
 
 /* The animation code */
 @keyframes menuOpen {
