Show legend and filters on fullscreen

--- a/app/styles/leaflet.css
+++ b/app/styles/leaflet.css
@@ -249,11 +249,11 @@
 	}
 
 
-/* general typography */
+/* general typography
 .leaflet-container {
 	font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
 	}
-
+*/
 
 /* general toolbar styles */
 
