--- a/app/styles/makeMaps_components.css
+++ b/app/styles/makeMaps_components.css
@@ -155,7 +155,7 @@ hr{
 }
 
 .dropZone{
-  border : 1px solid #54b4ce;
+  border : 1px dotted #54b4ce;
   height: 150px;
   line-height: 150px;
   border-radius: 15px;
