--- a/app/styles/makeMaps_components.css
+++ b/app/styles/makeMaps_components.css
@@ -35,6 +35,10 @@ hr{
   animation-duration: 0.2s;
 }
 
+.demoImage{
+  animation: imageReveal 0.6s;
+}
+
 .menu{
   color:#9e9e9e;
   text-align: center;
@@ -265,6 +269,23 @@ hr{
 
 :focus {outline:none;}
 ::-moz-focus-inner {border:0;}
+
+@keyframes imageReveal {
+  from{
+    filter: blur(5px) brightness(0.8);
+    -webkit-filter: blur(5px) brightness(0.8);
+    -moz-filter: blur(5px) brightness(0.8);
+    -o-filter: blur(5px) brightness(0.8);
+    -ms-filter: blur(5px) brightness(0.8);
+  }
+  to{
+    filter: blur(0px) brightness(1);
+    -webkit-filter: blur(0px) brightness(1);
+    -moz-filter: blur(0px) brightness(1);
+    -o-filter: blur(0px) brightness(1);
+    -ms-filter: blur(0px) brightness(1);
+  }
+}
 
 @keyframes menuOpen {
    from {width:0}
