--- a/app/styles/makeMaps_components.css
+++ b/app/styles/makeMaps_components.css
@@ -35,6 +35,16 @@ hr{
   animation-duration: 0.2s;
 }
 
+.legendRightAnimate{
+  animation-name: legendMoveLeft;
+  animation-duration: 0.2s;
+}
+
+.legendLeftAnimate{
+  animation-name: legendMoveRight;
+  animation-duration: 0.2s;
+}
+
 .demoImage{
   animation: imageReveal 0.6s;
 }
@@ -257,7 +267,7 @@ hr{
 #loading{
   top: 0;
   z-index: 999;
-  max-width: 120px;
+  max-width: 150px;
 }
 
 #notification{
@@ -295,4 +305,14 @@ hr{
 @keyframes menuClose {
    from {width:250}
    to {width: 0}
+}
+
+@keyframes legendMoveLeft {
+  from{right:30}
+  to {right: 281}
+}
+
+@keyframes legendMoveRight {
+  from{right:281}
+  to {right: 30}
 }
