--- a/app/styles/makeMaps_components.css
+++ b/app/styles/makeMaps_components.css
@@ -1,5 +1,5 @@
 body{
-  font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif;
+  font-family:'dejavu_sansbook', 'dejavu_sansextralight',Arial,sans-serif;
   line-height: 1.4;
   margin: 0;
   padding: 0;
@@ -16,7 +16,9 @@ body{
   height: 100%;
 }
 
+
 h2,h3{
+  font-family: 'dejavu_sansextralight',Arial,sans-serif;
   text-align: center;;
   margin: 0
 }
@@ -125,6 +127,7 @@ hr{
 	border:1px solid #54b4ce;
   border-radius: 5px;
 	display:inline-block;
+  font-family:'dejavu_sansbook',Arial,sans-serif;
 	color:#7a7a7a;
 	font-size:15px;
 	font-weight:bold;
@@ -154,9 +157,9 @@ hr{
   border-radius: 5px;
 	display:inline-block;
 	color:#c1c1c1;
-	font-family:Arial;
 	font-size:15px;
 	font-weight:bold;
+  font-family:'dejavu_sansbook',Arial,sans-serif;
 	font-style:normal;
 	height:40px;
 	line-height:40px;
@@ -198,6 +201,7 @@ hr{
    font-style: normal;
    font-weight: bold;
    height: 40px;
+   font-family:'dejavu_sansbook',Arial,sans-serif;
    line-height: 38px;
    text-align: center;
    text-decoration: none;
