--- a/app/styles/makeMaps_components.css
+++ b/app/styles/makeMaps_components.css
@@ -3,6 +3,12 @@ body{
   line-height: 1.4;
   margin: 0;
   padding: 0;
+  -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
+
 }
 /*base divs*/
 #content{
