Moved css handling to js from html to make integrations easier

--- a/styles/makeMaps_components.css
+++ b/styles/makeMaps_components.css
@@ -26,8 +26,8 @@ body{
 
 h2,h3{
   font-family: 'dejavu_sansextralight',Arial,sans-serif;
-  text-align: center;;
-  margin: 0
+  text-align: center;
+  margin: 0;
   text-align: center;
   margin: 0;
 }
