--- a/styles/makeMaps_components.css
+++ b/styles/makeMaps_components.css
@@ -37,6 +37,28 @@ hr{
   width: 75%;
 }
 
+.fav{
+  content: '';
+  background: url(../images/favicon.png);
+  background-size: contain;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
+  border-style: none;
+}
+
+.logo{
+  content: '';
+  background: url(../images/logo.png);
+  background-size: cover;
+  width: 210px;
+  height: 40px;
+  display: inline-block;
+  vertical-align: middle;
+  border-style: none;
+}
+
 .menuOpen{
   -webkit-animation: menuOpen 0.3s;
   animation: menuOpen 0.3s;
